# This file is part of IO Ninja project
# Tibbo Technology Inc (C) 2004-2013. All rights reserved
# Author: Vladimir Gladkov

#..............................................................................

add_subdirectory (nj_api)
# add_subdirectory (nj_ext)
add_subdirectory (nj_ssn)
 
#..............................................................................
