# This file is part of IO Ninja project
# Tibbo Technology Inc (C) 2004-2013. All rights reserved
# Author: Vladimir Gladkov

#..............................................................................

add_subdirectory (api)
add_subdirectory (layers)
add_subdirectory (sessions)
 
#..............................................................................
