# This file is part of IO Ninja project
# Tibbo Technology Inc (C) 2004-2013. All rights reserved
# Author: Vladimir Gladkov

#..............................................................................

add_subdirectory (nj_ext_CharColorizer)
add_subdirectory (nj_ext_CheckerColorizer)
add_subdirectory (nj_ext_RegExpColorizer)
add_subdirectory (nj_ext_XModem)
 
#..............................................................................
