# This file is part of IO Ninja project
# Tibbo Technology Inc (C) 2004-2013. All rights reserved
# Author: Vladimir Gladkov

#..............................................................................

add_subdirectory (nj_ssn_File)
add_subdirectory (nj_ssn_PipeListener)
add_subdirectory (nj_ssn_Serial)
add_subdirectory (nj_ssn_SerialMon)
add_subdirectory (nj_ssn_Sniffer)
add_subdirectory (nj_ssn_SshChannel)
add_subdirectory (nj_ssn_TcpConnection)
add_subdirectory (nj_ssn_TcpListener)
add_subdirectory (nj_ssn_TcpProxy)
add_subdirectory (nj_ssn_Udp)

#..............................................................................
