# This file is part of IO Ninja project
# Tibbo Technology Inc (C) 2004-2014. All rights reserved
# Author: Vladimir Gladkov

#..............................................................................

add_subdirectory (nj_ssp_File)
add_subdirectory (nj_ssp_PipeListener)
add_subdirectory (nj_ssp_Serial)
add_subdirectory (nj_ssp_SerialMon)
add_subdirectory (nj_ssp_Sniffer)
add_subdirectory (nj_ssp_SshChannel)
add_subdirectory (nj_ssp_TcpConnection)
add_subdirectory (nj_ssp_TcpListener)
add_subdirectory (nj_ssp_TcpProxy)
add_subdirectory (nj_ssp_Udp)

#..............................................................................
